--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -438,30 +438,27 @@
               data-id={{this.dataValues.id}}>Delete</button></div>
         </div>
         <table class="campaign-char-table" data-id={{this.dataValues.id}}>
-          <thead>
-            <tr>
-              <th class="row table-header">
+              <div class="row table-header">
                 <div class="col-6 col">
                   <h4>Name</h4>
                 </div>
-
-                <div class="col-6 col text-right add-character" data-id={{this.dataValues.id}}>
+                
+                  <div class="col-6 col text-right add-character" data-id={{this.dataValues.id}}>
                   <select class="campaign-char-select">
                     {{#each ../characters}}
                     <option value={{this.dataValues.id}}>{{this.dataValues.name}}</option>
                     {{/each}}
                   </select>
-                  <label class="paper-btn margin char-btn campaign-add-char-btn">Add Character</label>
+                  <label class="paper-btn char-btn campaign-add-char-btn">Add Character</label>
                 </div>
-
-              </th>
-            </tr>
-
+              </div>
+           
+          <thead></thead>
           </thead>
           <tbody>
             {{#each this.dataValues.Characters}}
             <tr data-id={{this.dataValues.id}}>
-              <td class="name">{{this.dataValues.name}}</td>
+              <td class="name-generated">{{this.dataValues.name}}</td>
               <td class="text-right"><label class="paper-btn char-btn view" for="characterModal">View</label></td>
               <td class="text-right"><label class="paper-btn char-btn action">Action</label>
               </td>
