added spell damage section to calculator

--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -156,7 +156,11 @@
       <div class="row">
         <div class="col-12 col">
           <h5>Character</h5>
-          <select class="calc-char-select"></select>
+          <select class="calc-char-select">
+            {{#each characters}}
+              <option value='{{this.dataValues.id}}' data='{{JSON2string this}}'>{{this.dataValues.name}}</option>
+            {{/each}}
+          </select>
         </div>
       </div>
       <div class="row flex-spaces tabs">
@@ -281,11 +285,11 @@
                   <span>Equipped Weapon</span>
                 </label>
                 <label for="dmgType2" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType2" value="another-weapon" checked> <span>Another
+                  <input type="radio" name="weapon-choices" id="dmgType2" value="another-weapon"> <span>Another
                     Weapon</span>
                 </label>
                 <label for="dmgType3" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType3" value="custom-weapon"> <span>Custom</span>
+                  <input type="radio" name="weapon-choices" id="dmgType3" value="custom-weapon" checked> <span>Custom</span>
                 </label>
               </fieldset>
               <div id="other-weap-select-area" class="form-group">
@@ -293,7 +297,8 @@
                 <select id="other-weapon-select">
                   <option value="null"></option>
                   {{#each weapons}}
-                      <option value={{this.dataValues.id}} data={{JSON2string this.dataValues}}>{{this.dataValues.name}}</option>
+                  <option value={{this.dataValues.id}} data='{{JSON2string this.dataValues}}'>{{this.dataValues.name}}
+                  </option>
                   {{/each}}
                 </select>
               </div>
@@ -308,7 +313,7 @@
                   <h5 class="text-center">Stat Bonus</h5>
                 </div>
               </div>
-              
+
               <div class="flex-horizontal space-between position-relative">
                 <div>
                   <p class="text-center">Stat</p>
@@ -412,7 +417,6 @@
                   <input id="spell-attack-stat-modifier" type="text" value="0" class="square-normal">
                 </div>
               </div>
-              {{!-- <p>Ability Modifier: <span></span></p> --}}
             </div>
             <div class="col-4 col option-pane">
               <div>
@@ -421,7 +425,7 @@
               <div>
                 <input id="spell-prof-bonus-field" type="text" value="0" class="calc-input">
               </div>
-              
+
 
 
             </div>
@@ -461,219 +465,210 @@
           <h5>Options</h5>
           <div class="row paper">
             <div class="col-4 col option-pane">
-              <fieldset id="weapon-choice" class="form-group">
-
-                <label for="dmgType1" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType1" value="equipped-weapon">
-                  <span>Equipped Weapon</span>
+              <fieldset id="spell-choice" class="form-group">
+                <label for="spellType1" class="paper-radio">
+                  <input type="radio" name="weapon-choices" id="spellType1" value="standard-spell">
+                  <span>Standard Spell</span>
                 </label>
-                <label for="dmgType2" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType2" value="another-weapon" checked> <span>Another
-                    Weapon</span>
-                </label>
-                <label for="dmgType3" class="paper-radio">
-                  <input type="radio" name="weapon-choices" id="dmgType3" value="custom-weapon"> <span>Custom</span>
+                <label for="spellType2" class="paper-radio">
+                  <input type="radio" name="weapon-choices" id="spellType2" value="custom-spell" checked> <span>Custom
+                    Spell</span>
                 </label>
               </fieldset>
-              <div id="other-weap-select-area" class="form-group">
-                <label for="other-weapon-select">Weapon</label>
-                <select id="other-weapon-select">
+              <div id="spell-select-area" class="form-group">
+                <label for="spell-select">Spell</label>
+                <select id="spell-select">
                   <option value="null"></option>
-                  {{#each weapons}}
-                      <option value={{this.dataValues.id}} data={{JSON2string this.dataValues}}>{{this.dataValues.name}}</option>
+                  {{#each spells}}
+                  <option value={{this.dataValues.id}} data='{{JSON2string this.dataValues}}'>{{this.dataValues.name}}
+                  </option>
                   {{/each}}
                 </select>
               </div>
               <div id="custom-area" class="form-group">
-                <label for="custom-weapon">Damage</label>
-                <input type="text" placeholder="e.g. 2d4" id="custom-weapon">
+                <label for="custom-spell">Damage</label>
+                <input type="text" placeholder="e.g. 2d4" id="custom-spell">
               </div>
             </div>
             <div class="col-4 col option-pane">
               <div class="row">
                 <div class="col">
-                  <h5 class="text-center">Stat Bonus</h5>
+                  <h5 class="text-center">Slot Bonus</h5>
                 </div>
               </div>
-              
-              <div class="flex-horizontal space-between position-relative">
-                <div>
-                  <p class="text-center">Stat</p>
-                  <input id="dmg-stat" type="text" value="10" class="square-normal">
-                </div>
-
-                <p class="center big">=</p>
-                <div>
-                  <p class="text-center">Modifier</p>
-                  <input id="dmg-stat-modifier" type="text" value="0" class="square-normal">
-                </div>
-              </div>
-              {{!-- <p>Ability Modifier: <span></span></p> --}}
-            </div>
-
-            <div class="col-4 col">
-              <div class="row">
-                <h5 class="text-center">Critical Hit</h5>
-              </div>
-              <fieldset class="form-group">
-                <div>
-                  <label for="crit-hit" class="paper-check">
-                    <input type="checkbox" name="paperChecks" id="crit-hit" value="crit" />
-                    <span></span></label>
-                </div>
-
-              </fieldset>
-              <div class="row">
-                <h5 class="text-center">2 handed</h5>
-              </div>
-              <fieldset class="form-group">
-                <div>
-                  <label for="two-handed" class="paper-check">
-                    <input type="checkbox" name="paperChecks" id="two-handed" value="twohand" />
-                    <span></span></label>
-                </div>
-
-              </fieldset>
-              <div class="row">
-                <h5>Other Modifiers</h5>
-                <input id="other-dmg-mods-field" type="text" placeholder="-2 + 5 + -3" class="calc-input">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-8 col">
-              <button id="dmg-roll-button" type="button">Roll</button>
-            </div>
-            <div class="col-4 col">
-              <p class="big">Damage Roll: <span id="dmg-result"></span></p>
-            </div>
-          </div>
-        </div>
-        <div class="content" id="content3">
-
-
-
-          <div class="row">
-            <div class="col-9 col">
-              <p>Enter expression:</p>
               <div class="form-group">
-
-                <input class="input-block" type="text" name="expr" placeholder="6d6-2L" id="custom-expression">
+                <label for="spell-slot-select">Slot</label>
+                <select id="spell-slot-select">
+                  <option value="dmg_slot_1">Level 1</option>
+                  <option value="dmg_slot_2">Level 2</option>
+                  <option value="dmg_slot_3">Level 3</option>
+                  <option value="dmg_slot_4">Level 4</option>
+                  <option value="dmg_slot_5">Level 5</option>
+                  <option value="dmg_slot_6">Level 6</option>
+                  <option value="dmg_slot_7">Level 7</option>
+                  <option value="dmg_slot_8">Level 8</option>
+                  <option value="dmg_slot_9">Level 9</option>
+                  
+                </select>
               </div>
 
             </div>
-            <div class="col-3 col">
-              <button id="custom-calculate">Calculate</button>
+
+          
+
+          <div class="col-4 col">
+            <div class="row">
+              <h5 class="text-center">Critical Hit</h5>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-12 col">
-              <p>Result: <span id="custom-result"></span></p>
+            <fieldset class="form-group">
+              <div>
+                <label for="crit-spell" class="paper-check">
+                  <input type="checkbox" name="paperChecks" id="crit-spell" value="crit" />
+                  <span></span></label>
+              </div>
+
+            </fieldset>
+            
+            <div class="row">
+              <h5>Other Modifiers</h5>
+              <input id="other-spell-dmg-mods-field" type="text" placeholder="-2 + 5 + -3" class="calc-input">
             </div>
           </div>
         </div>
-      </div>
-
-
-
-
-
-
-
-    </div>
-  </div>
-
-
-
-
-  {{!-- campaign area --}}
-  <div class="flex-center">
-    <div class="text-center">
-      <h1>Campaigns</h1>
-    </div>
-    <div class="text-right">
-      <label class="paper-btn margin" id="new-camp-btn" for="campaignModal">+ New Campaign</label>
-    </div>
-    {{#each campaigns}}
-
-
-    <div class="collapsible campaign">
-      <input id="collapsible-{{this.dataValues.id}}" type="checkbox" name="collapsible">
-      <label for="collapsible-{{this.dataValues.id}}">{{this.dataValues.name}}</label>
-      <div class="collapsible-body">
-        <div class="row flex-edges">
+        <div class="row">
           <div class="col-8 col">
-            <h3>Characters</h3>
+            <button id="spell-dmg-roll-button" type="button">Roll</button>
           </div>
-          <div class="col-4 col"><button class="delete-campaign float-right"
-              data-id={{this.dataValues.id}}>Delete</button></div>
+          <div class="col-4 col">
+            <p class="big">Damage Roll: <span id="spell-dmg-result"></span></p>
+          </div>
         </div>
-        <table class="campaign-char-table" data-id={{this.dataValues.id}}>
-          <thead>
-            <tr>
-              <th class="row table-header">
-                <div class="col-6 col">
-                  <h4>Name</h4>
-                </div>
+      </div>
+      <div class="content" id="content3">
 
-                <div class="col-6 col text-right add-character" data-id={{this.dataValues.id}}>
-                  <select class="campaign-char-select">
-                    {{#each ../characters}}
-                    <option value={{this.dataValues.id}}>{{this.dataValues.name}}</option>
-                    {{/each}}
-                  </select>
-                  <label class="paper-btn margin char-btn campaign-add-char-btn">Add Character</label>
-                </div>
 
-              </th>
-            </tr>
 
-          </thead>
-          <tbody>
-            {{#each this.dataValues.Characters}}
-            <tr data-id={{this.dataValues.id}}>
-              <td class="name">{{this.dataValues.name}}</td>
-              <td class="text-right"><label class="paper-btn char-btn view" for="characterModal">View</label></td>
-              <td class="text-right"><label class="paper-btn char-btn action">Action</label>
-              </td>
-              <td class="text-right"><label class="btn-close remove-from-campaign"
-                  data-id="{{this.dataValues.id}}">X</label></td>
-            </tr>
-            {{/each}}
-          </tbody>
-        </table>
+        <div class="row">
+          <div class="col-9 col">
+            <p>Enter expression:</p>
+            <div class="form-group">
+
+              <input class="input-block" type="text" name="expr" placeholder="6d6-2L" id="custom-expression">
+            </div>
+
+          </div>
+          <div class="col-3 col">
+            <button id="custom-calculate">Calculate</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col">
+            <p>Result: <span id="custom-result"></span></p>
+          </div>
+        </div>
       </div>
     </div>
-    {{/each}}
-  </div>
 
-  {{!-- characters area --}}
+
+
+
+
+
+
+  </div>
+</div>
+
+
+
+
+{{!-- campaign area --}}
+<div class="flex-center">
   <div class="text-center">
-    <h1>Characters</h1>
+    <h1>Campaigns</h1>
   </div>
-  <table id="all-char-table">
-    <thead>
-      <tr>
-        <div class="row table-header">
-          <div class="col-6 col">
-            <h4>Name</h4>
-          </div>
-          <div class="col-6 col text-right"><label id="add-character" class="paper-btn margin new-char-btn"
-              for="characterModal">+ New Character</label></div>
-        </div>
-      </tr>
+  <div class="text-right">
+    <label class="paper-btn margin" id="new-camp-btn" for="campaignModal">+ New Campaign</label>
+  </div>
+  {{#each campaigns}}
 
-    </thead>
-    <tbody>
-      {{#each characters}}
-      <tr id="character{{this.dataValues.id}}" data-id={{this.dataValues.id}}>
-        <td class="name">{{this.dataValues.name}}</td>
-        <td class="text-right"><label class="paper-btn view" for="characterModal">View</label></td>
-        <td class="text-right"><label class="paper-btn update" for="characterModal">Update</label></td>
-        <td class="text-right"><label class="paper-btn action">Action</label></td>
-        <td class="text-right"><label class="btn-close delete" id="delete">X</label></td>
-      </tr>
-      {{/each}}
-    </tbody>
-  </table>
+
+  <div class="collapsible campaign">
+    <input id="collapsible-{{this.dataValues.id}}" type="checkbox" name="collapsible">
+    <label for="collapsible-{{this.dataValues.id}}">{{this.dataValues.name}}</label>
+    <div class="collapsible-body">
+      <div class="row flex-edges">
+        <div class="col-8 col">
+          <h3>Characters</h3>
+        </div>
+        <div class="col-4 col"><button class="delete-campaign float-right"
+            data-id={{this.dataValues.id}}>Delete</button></div>
+      </div>
+      <table class="campaign-char-table" data-id={{this.dataValues.id}}>
+        <thead>
+          <tr>
+            <th class="row table-header">
+              <div class="col-6 col">
+                <h4>Name</h4>
+              </div>
+
+              <div class="col-6 col text-right add-character" data-id={{this.dataValues.id}}>
+                <select class="campaign-char-select">
+                  {{#each ../characters}}
+                  <option value={{this.dataValues.id}}>{{this.dataValues.name}}</option>
+                  {{/each}}
+                </select>
+                <label class="paper-btn margin char-btn campaign-add-char-btn">Add Character</label>
+              </div>
+
+            </th>
+          </tr>
+
+        </thead>
+        <tbody>
+          {{#each this.dataValues.Characters}}
+          <tr data-id={{this.dataValues.id}}>
+            <td class="name">{{this.dataValues.name}}</td>
+            <td class="text-right"><label class="paper-btn char-btn view" for="characterModal">View</label></td>
+            <td class="text-right"><label class="paper-btn char-btn action">Action</label>
+            </td>
+            <td class="text-right"><label class="btn-close remove-from-campaign"
+                data-id="{{this.dataValues.id}}">X</label></td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
+  {{/each}}
+</div>
+
+{{!-- characters area --}}
+<div class="text-center">
+  <h1>Characters</h1>
+</div>
+<table id="all-char-table">
+  <thead>
+    <tr>
+      <div class="row table-header">
+        <div class="col-6 col">
+          <h4>Name</h4>
+        </div>
+        <div class="col-6 col text-right"><label id="add-character" class="paper-btn margin new-char-btn"
+            for="characterModal">+ New Character</label></div>
+      </div>
+    </tr>
+
+  </thead>
+  <tbody>
+    {{#each characters}}
+    <tr id="character{{this.dataValues.id}}" data-id={{this.dataValues.id}}>
+      <td class="name">{{this.dataValues.name}}</td>
+      <td class="text-right"><label class="paper-btn view" for="characterModal">View</label></td>
+      <td class="text-right"><label class="paper-btn update" for="characterModal">Update</label></td>
+      <td class="text-right"><label class="paper-btn action">Action</label></td>
+      <td class="text-right"><label class="btn-close delete" id="delete">X</label></td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
 </div>
