--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,11 @@
-<div class="paper container">
+<div class="paper container index">
     <div class="row text-title">
+        
         <h1>D&amp;D Character Manager</h1>
     </div>
     <div class="row main-btn">
-        <div class="col">
+        <div class="col col-12 text-center">
             <button id="login-btn">Login</button>
-        </div>
-        <div class="col">
             <button id="create-btn">Create Account</button>
         </div>
     </div>
