--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,11 @@
 			<div class="collapsible-body">
 				<ul class="inline">
 					{{#if user}}
+					<li><fieldset class="form-group">
+					<label class="paper-switch-2">
+					<input id="light-dark" type="checkbox" />
+					<span class="paper-switch-slider round"></span>
+  					</label></fieldset></li>
 					<li><span>Welcome, {{user.email}}</span></li>
 					<li><a href="/campaigns">Profile</a></li>
 					<li><a href="/api/accounts/logout">Logout</a></li>
@@ -38,7 +43,7 @@
 			</div>
 		</div>
 	</nav>
-
+	
 	{{{ body }}}
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/script.js"></script>
