page now changes if user is logged in

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,10 +4,20 @@
     </div>
     <div class="row main-btn">
         <div class="col">
+            {{#unless user}}
             <button id="login-btn">Login</button>
+            {{/unless}}
+            {{#if user}}
+            <button id="profile-btn" onclick="location.href='/campaigns';">Profile</button>
+            {{/if}}
         </div>
         <div class="col">
+            {{#unless user}}
             <button id="create-btn">Create Account</button>
+            {{/unless}}
+            {{#if user}}
+            <button id="profile-btn" onclick="location.href='/api/accounts/logout';">Logout</button>
+            {{/if}}
         </div>
     </div>
 </div>
