--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -455,7 +455,7 @@
            
           <thead></thead>
           </thead>
-          <tbody>
+          <tbody id="campaign-char-{{this.dataValues.id}}">
             {{#each this.dataValues.Characters}}
             <tr data-id={{this.dataValues.id}}>
               <td class="name-generated">{{this.dataValues.name}}</td>
