--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -634,7 +634,7 @@
             <td class="text-right"><label class="paper-btn char-btn view" for="characterModal">View</label></td>
             <td class="text-right"><label class="paper-btn char-btn action" for="calc-modal">Action</label>
             </td>
-            <td class="text-right"><label class="btn-close remove-from-campaign"
+            <td class="text-right"><label class="btn-close x remove-from-campaign"
                 data-id="{{this.dataValues.id}}">X</label></td>
           </tr>
           {{/each}}
@@ -669,7 +669,7 @@
       <td class="text-right"><label class="paper-btn view" for="characterModal">View</label></td>
       <td class="text-right"><label class="paper-btn update" for="characterModal">Update</label></td>
       <td class="text-right"><label class="paper-btn action" for="calc-modal">Action</label></td>
-      <td class="text-right"><label class="btn-close delete" id="delete">X</label></td>
+      <td class="text-right"><label class="btn-close x delete" id="delete">X</label></td>
     </tr>
     {{/each}}
   </tbody>
