--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,27 @@ h4 {
     margin-block-end: 0em;
 }
 
+.collapsible .x, .x {
+  color: #41403e;
+  color: var(--primary-light);
+  transition: all 235ms ease-in-out 0s;
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: normal;
+  height: 1.1rem;
+  text-decoration: none;
+  top: 1rem;
+  width: 2rem;
+  border-bottom: 0;
+  padding: 0.5rem;
+  display: inline-block;
+}
+
+.x:hover {
+  color: #41403e !important;
+  color: var(--primary) !important;
+}
+
 .float-right {
   float: right;
 }
