--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -618,12 +618,10 @@
                   <option value={{this.dataValues.id}}>{{this.dataValues.name}}</option>
                   {{/each}}
                 </select>
-                <label class="paper-btn margin char-btn campaign-add-char-btn">Add Character</label>
+                <label class="paper-btn char-btn campaign-add-char-btn">Add Character</label>
               </div>
               </div>
-
-            
-
+              
         <thead></thead>
         <tbody id="campaign-char-{{this.dataValues.id}}">
             {{#each this.dataValues.Characters}}
