--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<div class="paper container">
+<div class="paper container index">
     <div class="row text-title">
         <h1>D&amp;D Character Manager</h1>
     </div>
