--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,11 @@
 				<ul class="inline">
 					{{#if user}}
 					<li><span>Welcome, {{user.email}}</span></li>
+					<li><fieldset class="form-group">
+					<label class="paper-switch-2">
+					<input id="light-dark" type="checkbox" />
+					<span class="paper-switch-slider round"></span>
+  					</label></fieldset></li>
 					<li><a href="/campaigns">Profile</a></li>
 					<li><a href="/api/accounts/logout">Logout</a></li>
 					{{/if}}
