--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,15 @@ body {
   background-size: 100%;;
 }
 
+.basic-info select {
+  margin: 0 auto;
+  width: 85%;
+}
+
+.dark body {
+  background-image: url("../img/dark-wood.jpg");
+}
+
 .index {
   padding-top: 10rem;
   padding-bottom: 5rem;
