--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,4 +1,4 @@
-<div class="paper container margin-bottom-large margin-top-large">
+<div class="paper container margin-bottom-large index">
         <form id="account-create">
           <h1>Account Creation</h1>
             <p class="error-message"></p>
